--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="index.css" rel="stylesheet">
     <title>Knowing Your Design History is Crucial to Aesthetic Innovation, Caroline and Myriam</title>
   </head>
   <body>
