Added agenda and padding

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <p>Words by Kristen Coogan</p>
     <p>Published on July 22nd, 2022</p>
     <p>This story is part of our Weekend Reads series, where we highlight a story we love from the archives. It was originally published on June   22, 2020.</p>
-     <h3>The Devil Wears Prada</h3>
+     <h2>THE DEVIL😈 WEARS PRADA👠</h2>
+     <h2>THE GREAT WHEEL 🎡 OF STYLE</h2>
+     <h2>MEMPHIS🟡🔷🔻DESIGN</h2>
+     <h2>⚪️▪️CONSTRUCTIVISM▪️🔴</h2>
+     <h2>CONCLUSION❗️❗️</h2>
+    <h3>The Devil Wears Prada</h3>
      <p>In the most iconic scene of The Devil Wears Prada, Andy (Anne Hathaway) nonchalantly dismisses two nearly identical blue belts in a room full of fashion forward elites. Andy’s icy, terrifying boss Miranda (Meryl Streep) retorts with a diatribe so full of vitriol that it effectively knocks Andy down a peg. It also illuminates Andy’s own naive contributions to the very stylistic machinery she so blithely critiques: Miranda traces the origins of Andy’s “lumpy blue sweater” all the way back to the explosion of the color cerulean in Oscar de la Renta and Yves Saint Laurent’s early 2000s runway shows, before filtering down to department stores and eventually discount retailers where Andy “no doubt, fished it out of some clearance bin.” </p>
       <p>Miranda’s acerbic history lesson sets into motion Andy’s transition from frumpy intern to uber-glam fixer, but it also does a favor for anyone interested in visual culture. The past offers a wellspring of formal, conceptual, and philosophical inspiration, making a deep knowledge of design history necessary for stylistic innovation. Knowing design history gives context to our contemporary visual culture—we can use the past to decode the present and forecast a stylistic future. </p>
      <h3>The Great Wheel of Style</h3>
