--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html>
   <head>
     <link href="index.css" rel="stylesheet">
-    <title>Knowing Your Design History is Crucial to Aesthetic Innovation, Caroline and Myriam</title>
+    <div class="solid">
+        <div class="nav">
+    <p><span style= color:white;>Design 101</span></p></div>
+    <title>KNOWING 👓 Your Design History📚 
+        is Crucial to 
+        AESTHETIC INNOVATION💡, Caroline and Myriam</title>
   </head>
   <body>
-    <h1>Knowing Your Design History is Crucial to Aesthetic Innovation</h1>
-    <p>Style cycles in and out of fashion—history helps us decode the present and forecast the future</p>
+    <h1>* </br> KNOWING 👓 <div class="raleway">Your Design History📚 
+        is Crucial to </div> 
+        AESTHETIC INNOVATION💡</h1>
+    <p><div class="subtitle">Style cycles in and out of fashion—history helps us decode the present and forecast the future</div></p>
+    <hr class="line">
     <p>Words by Kristen Coogan</p>
     <p>Published on July 22nd, 2022</p>
-    <p>This story is part of our Weekend Reads series, where we highlight a story we love from the archives. It was originally published on June   22, 2020.</p>
+    <p><div class="quotes">This story is part of our Weekend Reads series, </br>where we highlight a story we love from the archives. It was originally published on June   22, 2020.</div></p>
      <h2>THE DEVIL😈 WEARS PRADA👠</h2>
      <h2>THE GREAT WHEEL 🎡 OF STYLE</h2>
      <h2>MEMPHIS🟡🔷🔻DESIGN</h2>
