Troubleshoot mobile version

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link href="index.css" rel="stylesheet">
     <div class="solid">
         <div class="nav">
@@ -10,7 +12,8 @@
         AESTHETIC INNOVATION💡, Caroline and Myriam</title>
   </head>
   <body>
-    <h1>* </br> KNOWING 👓 YOUR <div class="raleway">Your Design History📚 
+    <header>
+    <h1>* </br> KNOWING 👓 YOUR <div class="raleway">Design History📚 
         is Crucial to </div> 
         <div class="indentae">AESTHETIC INNOVATION💡</div></h1>
     <p><div class="subtitle">Style cycles in and out of fashion—history helps us decode the present and forecast the future</div></p>
@@ -19,6 +22,7 @@
     <div class="infos">
     <p><div class="bold">Words by</div><br/> Kristen Coogan</p>
     <p><div class="bold">Published on</div></br> July 22nd, 2022</p></div>
+    </header>
     <h2><div class="agen"><span style=color:aliceblue;> DEVIL😈 WEARS PRADA👠</span></div></h2>
      <h2><div class="agenn"><span style=color:midnightblue;> GREAT WHEEL 🎡 OF STYLE</span></div></h2>
      <h2><div class="agennn"><span style=color:aliceblue;>MEMPHIS🟡🔷🔻DESIGN</span></div></h2>
