--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
   </head>
   <body>
     <header>
+        <div class="header">
     <h1>* </br> KNOWING 👓 YOUR <div class="raleway">Design History📚 
         is Crucial to </div> 
-        <div class="indentae">AESTHETIC INNOVATION💡</div></h1>
-    <p><div class="subtitle">Style cycles in and out of fashion—history helps us decode the present and forecast the future</div></p>
+        <div class="indentae"><span class="auto-type">AESTHETIC INNOVATION💡</span></div></h1>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script>
+            var type = new Typed(".auto-type",{
+                strings:["AESTHETIC INNOVATION💡"],
+                typespeed:40,
+                backspeed:40,
+                loop:true
+            })
+        </script>
+        <hr class="line">
+    <p><div class="subtitle">Style cycles in and out of fashion—history helps us </br>decode the present and forecast the future</div></p>
+        </div>
     <hr class="line">
     <p><div class="quotes">" This story is part of our Weekend Reads series, </br>where we highlight a story we love from the archives. </br>It was originally published on June   22, 2020."</div></p>
     <div class="infos">
@@ -28,6 +40,7 @@
      <h2><div class="agennn"><span style=color:aliceblue;>MEMPHIS🟡🔷🔻DESIGN</span></div></h2>
      <h2><div class="agennnn"><span style=color:aliceblue;>⚪️▪️CONSTRUCTIVISM▪️🔴</span></div></h2>
      <h2><div class="concluagen"><span style=color:coral;>CONCLUSION‼️</span></div></h2>
+     
     <h3> <div class="thebar"><span style=color:lightblue;>DEVIL😈 WEARS PRADA👠</span></div></h3>
     <div class="sec1" >
        
