update the hover colors

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <p><div class="bold">Words by</div><br/><div class="author"> Kristen Coogan</div></p>
     <div class="bold">Published on</div></br><div class="author"> July 22nd, 2022</div></p></div>
     
-    <h2><div class="agen"><span style=color:aliceblue;> DEVIL😈 WEARS PRADA👠</span></div></h2>
-     <h2><div class="agenn"><span style=color:midnightblue;> GREAT WHEEL 🎡 OF STYLE</span></div></h2>
-     <h2><div class="agennn"><span style=color:aliceblue;>MEMPHIS🟡🔷🔻DESIGN</span></div></h2>
-     <h2><div class="agennnn"><span style=color:aliceblue;>⚪️▪️CONSTRUCTIVISM▪️🔴</span></div></h2>
-     <h2><div class="concluagen"><span style=color:coral;>CONCLUSION‼️</span></div></h2>
+   <h2><div class="agen"><div class="agen:hover"> DEVIL😈 WEARS PRADA👠</span></div></div></h2>
+     <h2><div class="agenn"><div class="agenn:hover">GREAT WHEEL 🎡 OF STYLE</span></div></div></h2>
+     <h2><div class="agennn"><div class="agennn:hover">MEMPHIS🟡🔷🔻DESIGN</span></div></div></h2>
+     <h2><div class="agennnn"><div class="agennnn:hover">⚪️▪️CONSTRUCTIVISM▪️🔴</span></div></div></h2>
+     <h2><div class="concluagen"><div class="concluagen">CONCLUSION‼️</span></div></div></h2>
 
     
     <div class="sec1" >
