update the agenda hover colors

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <h2><div class="agenn"><div class="agenn:hover">GREAT WHEEL 🎡 OF STYLE</span></div></div></h2>
      <h2><div class="agennn"><div class="agennn:hover">MEMPHIS🟡🔷🔻DESIGN</span></div></div></h2>
      <h2><div class="agennnn"><div class="agennnn:hover">⚪️▪️CONSTRUCTIVISM▪️🔴</span></div></div></h2>
-     <h2><div class="concluagen"><div class="concluagen">CONCLUSION‼️</span></div></div></h2>
+     <h2><div class="concluagen"><div class="concluagen:hover">CONCLUSION‼️</span></div></div></h2>
 
     
     <div class="sec1" >
